--- a/theme/templates/includes/author-preview.html
+++ b/theme/templates/includes/author-preview.html
@@ -49,7 +49,7 @@
                                     </a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr v-if="is_person">
                                 <td class="text-center">
                                     <i class="fa fa-external-link-square" aria-hidden="true"></i>
                                 </td>
