Add placeholder for author name input

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -97,6 +97,7 @@
                                             <div class="controls">
                                                 <input v-model="author.name"
                                                        id="creator-name"
+                                                       placeholder="e.g. 'Smith, John Arnold'"
                                                        required="required"
                                                        class="form-control input-sm textinput textInput"
                                                        maxlength="100">
@@ -271,6 +272,7 @@
                                         <input v-model="author.name"
                                                :required="is_person ? 'required' : 'false'"
                                                id="creator-name"
+                                               placeholder="e.g. 'Smith, John Arnold'"
                                                class="form-control input-sm textinput textInput"
                                                maxlength="100">
                                     </div>
