Change community resource shared by formatting

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -61,15 +61,16 @@
                                                         shared with this community yet.</i>
                                                 {% else %}
                                                     {% for g in groups %}
-                                                        <li class="list-group-item" id="{{ g.id }}"><div style="white-space:nowrap;">
+                                                        <li class="list-group-item" id="{{ g.id }}">
+
                                                             <label class="checkbox noselect"
-                                                                 for="{{ g.id }}">{{ g.name }}<input type="checkbox" id="{{ g.id }}" value="Click"
+                                                                 for="{{ g.id }}">{{ g.name }}&nbsp;<span class="badge">{{ g.res_count }}</span><input type="checkbox" id="{{ g.id }}" value="Click"
                                                                     @click="updateContribs({{ g.id }})"
                                                             {% if grpfilter == g.name %}
                                                                  checked
                                                             {% endif %}
-                                                            />&nbsp;&nbsp;<span class="badge">{{ g.res_count }}</span>
-                                                            </label></div>
+                                                            />
+                                                            </label>
                                                         </li>
                                                     {% endfor %}
                                                 {% endif %}
