--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -1,12 +1,21 @@
+{% extends "pages/page.html" %}
+{% load comment_tags %}
+
+{% block extra_css %}
+    {{ block.super }}
+{#    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">#}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>{% endblock %}
+
 {% block main %}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Topics Editor</title>
-        <link rel="shortcut icon" href="/">
-    </head>
-    <body>
+{#    <!DOCTYPE html>#}
+{#    <html lang="en">#}
+{#    <head>#}
+{#        <meta charset="UTF-8">#}
+{#        <title>Topics Editor</title>#}
+{#        <link rel="shortcut icon" href="/">#}
+{#    </head>#}
+{#    <body>#}
+    <a href="{{ request.META.HTTP_REFERER }}">back to resource</a>
     <div id="topics-app">
         <h2>Edit Topics</h2>
         <input id="add-topic" type="text" v-model="newTopic"/>
@@ -22,15 +31,7 @@
             </ul>
         </template>
     </div>
-    </body>
-    </html>
-{% endblock %}
-
-{% block extra_js %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.3.0.2.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select-1.6.3.min.css"/>
-
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-3.4.1.min.js"></script>
+{#        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-3.4.1.min.js"></script>#}
     <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>
     <script type="application/javascript">
         // contents here are required by topics.js
@@ -38,5 +39,48 @@
     </script>
 
     <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script>
+{#    </body>#}
+{#    </html>#}
+{% endblock main %}
 
-{% endblock %}
+{#{% block extra_js %}#}
+{#    {{ block.super }}#}
+{#    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-3.4.1.min.js"></script>#}
+{#    <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>#}
+{#    <script type="application/javascript">#}
+{#        // contents here are required by topics.js#}
+{#        const topics_from_page = JSON.parse("{{ topics_json }}");#}
+{#    </script>#}
+{##}
+{#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script>#}
+{#{% endblock %}#}
+
+
+{#{% block main %}#}
+{#    <!DOCTYPE html>#}
+{#    <html lang="en">#}
+{#    <head>#}
+{#        <meta charset="UTF-8">#}
+{#        <title>Topics Editor</title>#}
+{#        <link rel="shortcut icon" href="/">#}
+{#    </head>#}
+{#    <body>#}
+{#    <div id="topics-app">#}
+{#        <h2>Edit Topics</h2>#}
+{#        <input id="add-topic" type="text" v-model="newTopic"/>#}
+{#        <button v-on:click="addTopic('{{ csrf_token }}', )">Add Topic</button>#}
+{#        <template>#}
+{#            <ul>#}
+{#                <li v-for="number in numbers">#}
+{#                    <span v-show="!number.edit" v-on:click="toggleEdit(this, number)">{% templatetag openvariable %} number.val[1] {% templatetag closevariable %}</span>#}
+{#                    <input type="text" v-model="number.val[1]" v-show="number.edit"#}
+{#                           v-on:blur="saveEdit('{{ csrf_token }}', this, number)"/>#}
+{#                    <span style="cursor:pointer" v-on:click="deleteTopic('{{ csrf_token }}', number.val[0])">X</span>#}
+{#                </li>#}
+{#            </ul>#}
+{#        </template>#}
+{#    </div>#}
+{#    </body>#}
+{#    </html>#}
+{#{% endblock %}#}
+
