Update text above contributors table

--- a/theme/templates/resource-landing-page/credits.html
+++ b/theme/templates/resource-landing-page/credits.html
@@ -41,15 +41,9 @@
     {% if contributors %}
         <div class="col-xs-12 content-block">
             <h4>Contributors</h4>
-            <div>
-                <span>People or
-                    organizations that contributed technically, materially,
-                    financially, or provided general support for the
-                    creation of the resource's content but are not
-                    considered authors.
-                </span>
-            </div>
-            <br>
+            <p><i>People that contributed technically, materially, financially, or provided general support for the
+                creation of the resource's content but are not considered authors.
+            </i></p>
             <table class="table hs-table contact-table contact-table-view">
                 <thead>
                 <tr class="header-row">
@@ -149,10 +143,9 @@
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
         </h4>
-        <p>
-            <i>People or organizations that contributed technically, materially, financially, or provided general
-                support for the creation of the resource's content but are not considered authors.</i>
-        </p>
+        <p><i>People that contributed technically, materially, financially, or provided general support for the creation
+            of the resource's content but are not considered authors.
+        </i></p>
 
         {% if contributors %}
             <table class="hs-table contact-table table d-block">
