--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -252,8 +252,8 @@
 
                         </div>
                         <div class="modal-footer">
-                            <span style="color:red; float:left">{% templatetag openvariable %}
-                                            errmsg {% templatetag closevariable %}</span>
+{#                            <span style="color:red; float:left">{% templatetag openvariable %}#}
+{#                                            errmsg {% templatetag closevariable %}</span>#}
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                             <button type="button" v-on:click="saveTitle()" class="btn btn-primary">Save changes</button>
                         </div>
